# insta360-auto-converter

./: .dockerignore  .envrc.sample  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  configs.yaml.sample  pyproject.toml
.claude/rules/: architecture.md  coding-style.md  dev-environment.md  security.md  simplicity.md  tdd.md  unit-test.md
.github/workflows/: ci.yml
.kiro/specs/selective-upload-targets/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md  testing.md
apps/: app_config.py  gdrive_service.py  google_photos_uploader.py  insta360_auto_converter.py  local_auto_converter.py  local_input.py  refersh_gphotos_cred.py  spherical_v2.py  stitcher.py  utils.py  video_processor.py
apps/spatial-media/spatialmedia/: metadata_utils.py
scripts/: _e2e_album_cache.py  check-env-diff.sh
tests/: conftest.py  test_app_config.py  test_conftest_fixtures.py  test_drive_mode_config_consumer_loads_yaml.py  test_gdrive_service.py  test_google_photos_uploader.py  test_local_auto_converter.py  test_local_input.py  test_spherical_v2.py  test_stitcher.py  test_utils.py  test_video_processor.py
